--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,3 +10,11 @@ body {
   font-family: "Open Sans";
   margin: 22.22px;
 }
+
+ul {
+  list-style-type: none;
+}
+
+.kv-form {
+  margin: 15px 0 0 0;
+}
