--- a/assets/styles.css
+++ b/assets/styles.css
@@ -19,3 +19,9 @@ ul {
 .kv-form {
   margin: 15px 0 0 0;
 }
+
+/* Field label */
+.kv-form > ul > li > label {
+  font-size: 14px;
+  font-weight: bold;
+}
