--- a/assets/styles.css
+++ b/assets/styles.css
@@ -40,3 +40,9 @@ ul {
   color: #fff;
   padding: 7px 25px;
 }
+
+.kv-form > ul > li > input {
+    padding:2px 0 0 3px;
+    max-width: 270px;
+    width: 100%;
+}
